force-app/main/default/objects/AutoRabitTest__c/fields/CounterParty__c.field-meta.xml
<CustomField>
    <fullName>CounterParty__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CounterParty</label>
    <length>120</length>
    <type>Text</type>
</CustomField>