force-app/main/default/objects/AutoRabitTest__c/fields/CP_Mail__c.field-meta.xml
<CustomField>
    <fullName>CP_Mail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CP Mail</label>
    <type>Email</type>
</CustomField>