force-app/main/default/objects/AutoRabitTest__c/fields/CP_Phone__c.field-meta.xml
<CustomField>
    <fullName>CP_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CP Phone</label>
    <type>Phone</type>
</CustomField>