force-app/main/default/objects/AutoRabitTest__c/fields/NewEmail__c.field-meta.xml
<CustomField>
    <fullName>NewEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NewEmail</label>
    <length>150</length>
    <type>Text</type>
</CustomField>