force-app/main/default/objects/AutoRabitTest__c/fields/next123__c.field-meta.xml
<CustomField>
    <fullName>next123__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>next123</label>
    <length>50</length>
    <type>Text</type>
</CustomField>